--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@typhonjs-utils/file-util",
   "description": "Provides several utility functions for working with the file system including a TyphonJS plugin.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Michael Leahy <support@typhonjs.io> (https://github.com/typhonrt)",
   "type": "module",
-  "main": "src/index.js",
-  "module": "src/index.js",
+  "main": "src/functions.js",
+  "module": "src/functions.js",
   "exports": {
-    ".": "./src/index.js"
+    ".": "./src/functions.js",
+    "./plugin": "./src/plugin.js"
   },
   "contributors": [
     "Michael Leahy <support@typhonjs.io> (https://github.com/typhonrt)"
@@ -22,7 +23,7 @@
     "/npm-shrinkwrap.json",
     "/src"
   ],
-  "homepage": "https://github.com/typhonjs-node-utils/file-util",
+  "homepage": "https://github.com/typhonjs-node-utils/file-util#readme",
   "keywords": [
     "typhonjs",
     "utils",
