--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@typhonjs-utils/file-util",
   "description": "Provides several utility functions for working with the file system including a TyphonJS plugin.",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "Michael Leahy <support@typhonjs.io> (https://github.com/typhonrt)",
   "type": "module",
   "main": "src/functions.js",
@@ -13,6 +13,9 @@
   "contributors": [
     "Michael Leahy <support@typhonjs.io> (https://github.com/typhonrt)"
   ],
+  "dependencies": {
+    "upath": "^2"
+  },
   "devDependencies": {
     "@typhonjs-utils/build-test": "^0.1.0"
   },
