--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@typhonjs-utils/file-util",
   "description": "Provides several utility functions for working with the file system including a TyphonJS plugin.",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "author": "Michael Leahy <support@typhonjs.io> (https://github.com/typhonrt)",
   "type": "module",
   "exports": {
@@ -28,7 +28,8 @@
     "upath": "^2"
   },
   "devDependencies": {
-    "@typhonjs-build-test/node": "^0.0.6"
+    "@typhonjs-build-test/node-browser": "^0.0.3",
+    "rollup": "^3"
   },
   "engines": {
     "node": ">=14.18"
@@ -49,8 +50,11 @@
   "repository": "github:typhonjs-node-utils/file-util",
   "scripts": {
     "eslint": "eslint .",
-    "posttest": "npm run eslint",
-    "test": "c8 --reporter=lcov --reporter=text-summary mocha -colors \"test/src/**/*.test.js\"",
+    "prepublishOnly": "npm run eslint && npm run types && npm run test-node && npm run test-browser",
+    "pretest-browser": "rollup --config rollup.config.browser-test.js",
+    "posttest-browser": "nyc report --exclude-after-remap=true --reporter=lcov --reporter=text-summary --report-dir=coverage-browser",
+    "test-browser": "node ./test/src/browser/run.js",
+    "test-node": "c8 --exclude-after-remap=true --reporter=lcov --reporter=text-summary mocha -colors \"test/src/node/**/*.test.js\" --timeout 16000",
     "types": "node -e \"import('@typhonjs-build-test/esm-d-ts').then(module => { module.generateDTS({ input: './src/index.js', output: './types/index.d.ts' }); module.generateDTS({ input: './src/functions-browser.js', output: './types/index-browser.d.ts' }) });\""
   }
 }
