--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "upath": "^2"
   },
   "devDependencies": {
-    "@typhonjs-build-test/esm-d-ts": "^0.1.1",
-    "@typhonjs-build-test/node-browser": "^0.0.3",
-    "rollup": "^3"
+    "@typhonjs-build-test/esm-d-ts": "^0.2.0-next.3",
+    "@typhonjs-build-test/node-browser": "^0.0.4",
+    "rollup": "^4.9.4"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=16"
   },
   "files": [
     "/npm-shrinkwrap.json",
